# search-engine-rs

./: .gitignore  Cargo.toml
migrations/: 20240331195826_add-website-table.sql  20240331195826_create_website_table.sql  20240331230544_add-keywords-table.sql  20240331230728_add-website-keywords.sql  20240401233833_add_website_keywords_frequency.sql  20240401234458_create_website_keyword_tfidf.sql
src/: main.rs  website.rs
src/models/: keyword.rs  mod.rs  website.rs  website_keyword_tfidf.rs  website_keywords.rs
src/services/: crawler.rs  file_reader.rs  mod.rs  page_parser.rs  site_pool.rs  text_pool.rs
