[package]
name = "seach-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.197"
csv-async = { version = "1.3.0" , features = ["tokio", "with_serde"]}

spider = { version = "1.89.4", features = ["real_browser","smart"]}
tokio = { version = "1.37.0" , features = ["full"]}
tokio-stream = "0.1.15"
futures = "0.3.30"
stop-words = "0.8.0"
rust-stemmers = "1.2.0"
html_parser = "0.7.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", ] }