[package]
name = "seach-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37" , features = ["serde"]}
csv-async = { version = "1.3.0" , features = ["tokio", "with_serde"]}
futures = "0.3.30"
html_parser = "0.7.0"

rust-stemmers = "1.2.0"
serde = "1.0.197"
serde_json = "1"
spider = { version = "1.89.4", features = ["real_browser","smart"]}
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "sqlx-postgres", "postgres", "uuid", "time"] }
stop-words = "0.8.0"
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.37.0" , features = ["full"]}
tokio-stream = "0.1.15"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
url = "2.5.0"
scraper = "0.19.0"
